--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 # Doc Search App Client Side rendering in React.
 
+Demo:
+http://3.16.149.228:1238/index.html
+This app is running on AWS with using MongoDB and Web server installed in other repository(doc-search-web-server)
+
 Setup:
 * Clone or download repository.
 * run 'npm install'.
